--- a/Whogohost.css
+++ b/Whogohost.css
@@ -1,13 +1,14 @@
-
-#wee{
+#wee {
     margin-left: 250px;
     width: fit-content;
-    
+
 }
-#yes{
+
+#yes {
     margin-right: 130px;
 }
-#meat{
+
+#meat {
     background-color: white;
     width: 300px;
     height: 550px;
@@ -16,27 +17,22 @@
     padding: 20px;
     /* margin-bottom: 500px; */
 }
-#cow{
+
+#cow {
     margin-left: 620px;
 }
-#fee{
-    text-align: ;
+
+#fee {
+
     margin-right: 175px;
 }
-#foe{
+
+#foe {
     margin-right: 220px;
-    
+
 }
-#woe{
-    background: rgb(52, 52, 231);
-    color: white;
-    border: none;
-    width: 200px;
-    height: 40px;
-    text-align: center;
-    font-size: larger;
-}
-#woo{
+
+#woe {
     background: rgb(52, 52, 231);
     color: white;
     border: none;
@@ -46,13 +42,25 @@
     font-size: larger;
 }
 
-form{
+#woo {
+    background: rgb(52, 52, 231);
+    color: white;
+    border: none;
+    width: 200px;
+    height: 40px;
+    text-align: center;
+    font-size: larger;
+}
+
+form {
     text-align: center;
 }
-h3{
+
+h3 {
     text-align: center;
 }
-#man{
+
+#man {
     width: 300px;
     height: 40px;
     margin: 10px 0px 0px 0px;
@@ -60,101 +68,86 @@ h3{
     border: 1px solid rgb(162, 160, 160);
 
 }
-#mai{
+
+#mai {
     width: 300px;
     height: 40px;
     margin: 10px 0px 0px 0px;
     border-radius: 4px;
     border: 1px solid rgb(162, 160, 160);
- 
-}    
-h3{
+
+}
+
+h3 {
     font-size: 25px;
 }
+
 /* nav bar */
 
-body{
+body {
     padding: 0px 0px 0px 0px;
     margin: 0px;
-    background:rgba(10, 36, 60, 255);
+    background: rgba(10, 36, 60, 255);
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-nav{
-    background: rgba(0, 31, 111, 255);;
+
+nav {
+    background: rgba(0, 31, 111, 255);
+    ;
     width: 100%;
     height: 50px;
     margin: 0px 0px 0px 0px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 10px ;
-    
+    padding: 20px 10px;
+
 }
-nav ul{
+
+nav ul {
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0px 20px;
-    
+
 }
-nav ul li{
+
+nav ul li {
     list-style-type: none;
     padding: 0px 5px;
     margin: 0px 0px 0px 15px;
-    
-   
+
+
 }
-#max{
+
+#max {
     color: white;
     text-decoration: none;
     font-size: 25px;
     text-transform: uppercase;
 }
-#max:hover{
+
+#max:hover {
     background: rgb(4, 4, 144);
     padding: 10px 20px 10px 20px;
     border-radius: 13px;
-    box-shadow: 9px 9px 10px  rgb(4, 4, 170);
+    box-shadow: 9px 9px 10px rgb(4, 4, 170);
 }
-#nora{
+
+#nora {
     color: white;
     margin: 0px;
     text-decoration: none;
     font-size: 40px;
 }
-.fa-solid{
+
+.fa-solid {
     margin: 0px 9px 0px 0px;
 }
-.fa-solid:hover{
+
+.fa-solid:hover {
     background: rgb(4, 4, 144);
     padding: 7px 10px;
     border-radius: 13px;
-    box-shadow: 9px 9px 10px  rgb(4, 4, 170);
-}
-
-
-
-
-
-
-
-
-#mado{
-    background: rgba(0, 31, 111, 255);
-    width: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 120px;
-    left: 30px;
-    padding: 10px;
-    border-radius: 10px;
-}
-#jl{
-    margin-right: 10px;
-    text-decoration: none;
-    color: rgba(204, 180, 212, 255);
-    font-size: 20px;
-    text-transform: capitalize;
+    box-shadow: 9px 9px 10px rgb(4, 4, 170);
 }
