--- a/form.css
+++ b/form.css
@@ -137,14 +137,15 @@ input[type="submit"]{
 #lado{
     position: fixed;
     top: 8px;
-    left: 750px;
+    left: 320px;
     background: none;
     width: 100%;
     
-    margin: 20px 20px;
+    margin: 20px 20px 20px 200px;
 
     
 }
+
 #lado ul li{
     display: inline-flex;
     margin: 0px 5px;
@@ -169,7 +170,7 @@ input[type="submit"]{
     box-shadow: 10px 10px 10px rgb(46, 1, 46);
 }
 .fa-solid{
-    margin: 15px;
+    margin: 15px 0px 15px 15px;
     
     text-align: center;
 }
@@ -178,6 +179,9 @@ input[type="submit"]{
     border-radius: 20px;
     padding: 10px;
     box-shadow: 10px 10px 10px rgb(46, 1, 46);
+}
+#oU{
+
 }
 #fl{
     color: rgba(204, 180, 212, 255);
